# YT-DLP-Made-EZ

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-release.yml  check-binary-urls.yml
docs/: HANDOFF.md
scripts/: generate-icons.py  verify-binary-urls.sh
src/: App.css  App.jsx  App.test.jsx  format.js  format.test.js  test-setup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: args.rs  error.rs  lib.rs  progress.rs  urls.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  process.rs  updater.rs  ytdlp.rs
src/components/: DownloadForm.jsx  FormatSelector.jsx  ProgressBar.jsx  StatusMessage.jsx  UpdateBanner.jsx
